--- a/style.css
+++ b/style.css
@@ -364,3 +364,55 @@ background-color:  rgb(65, 65, 65);
   90% { opacity: 1; }
   100% { opacity: 0; }
 }
+
+/* box de confirmacion */
+.modal {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 300px;
+}
+
+.modal-buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.btn-si{
+ height: 25px;
+ width: 60px;
+ background-color: #00ff00;
+ font-weight: bold;
+ cursor: pointer;
+}
+.btn-no{
+  height: 25px;
+  width: 60px;
+  background-color: #ff0000;
+  font-weight: bold;
+  transition: 0.7s;
+  cursor: pointer;
+}
+
+.btn-no:hover{
+  background-color: #da0505;
+}
+.btn-si:hover{
+  background-color: #05d405;
+}
