--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body{
     height: auto;
     width: 60%;
     border-radius: 10px;
-    border: 1px solid yellow;
+    border: px solid yellow;
 
 }
 form {
@@ -171,7 +171,7 @@ transition: 0.5s;
 background-color:  rgb(65, 65, 65);
 }
 .submit_container{
-    border: 1px solid purple;
+    border: px solid purple;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -185,7 +185,7 @@ background-color:  rgb(65, 65, 65);
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: 1px solid black;
+    border: px solid black;
     height: 50px;
 }
 
@@ -233,8 +233,23 @@ background-color:  rgb(65, 65, 65);
   .delete_button:hover{
     background-color: rgb(226, 7, 7);
   }
+  .delete_button_recomendacion{
+    height: 40px;
+    width: 90px;
+    font-weight: bold;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    border: 2px solid black;
+    background-color: red;
+    transition: 0.3s;
+  }
+  .delete_button_recomendacion:hover{
+    background-color: rgb(226, 7, 7);
+  }
   .contenido_db{
-    border: 1px solid red;
+    border: px solid red;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -275,7 +290,7 @@ background-color:  rgb(65, 65, 65);
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid green;
+    border: px solid green;
     height: 100px;
     width: 80%;
   }
@@ -310,7 +325,7 @@ background-color:  rgb(65, 65, 65);
     justify-content: center;
     align-items: center;
      flex-direction: column;
-     border: 1px solid red;
+     border: px solid red;
      height: 100px;
      width: 100%;
      margin: 0;
