--- a/style.css
+++ b/style.css
@@ -431,3 +431,96 @@ background-color:  rgb(65, 65, 65);
 .btn-si:hover{
   background-color: #05d405;
 }
+
+.tipos-de-reportes{
+  display: flex;
+  height: 500px;
+  width: 80%;
+  margin: 0;
+  padding: 0;
+  border: px solid red;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+}
+
+.reporte-container{
+display: flex;
+margin-top: 10px;
+height: 100px;
+width: 200px;
+background-color: #3edc00;
+border: 2px solid white;
+border-radius: 5px;
+align-items: center;
+justify-content: center;
+text-align: center;
+cursor: pointer;
+color: #000000;
+  text-decoration: none; 
+  transition: 0.5s;
+}
+.reporte-container:hover{
+  background-color: #3bc704;
+}
+
+a{
+  text-decoration: none;
+}
+
+.reporte-option{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 100px;
+}
+
+.reporte_button{
+  height: 40px;
+  width: 90px;
+  font-weight: bold;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 2px solid black;
+  background-color: rgb(7, 255, 243);
+  
+}
+
+.contenido_db_renderer{
+   margin: 20px auto; /* Espaciado externo para centrar */
+    padding: 20px; /* Espaciado interno */
+    background-color: #ffffff;
+    width: 80%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    
+    flex-direction: column;
+    align-items: center;
+}
+
+.contenido_db_renderer th,td,tr,table{
+  border: 1px solid black;
+}
+.contenedor-prof-info{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 40px;
+width: 60%;
+  border-bottom: 1px solid black;
+}
+
+.descargar-pdf{
+  display: flex;
+  height: 40px;
+  width: 130px;
+  background-color: yellow;
+  color: black;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
